// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit handles receiving MessageEvent 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -28,33 +28,16 @@
          <span>
            Bookmark this page
          </span>
        </span>
      </button>
-     <div>
      <div
-         class=\\"d-flex justify-content-center align-items-center flex-column\\"
-         style=\\"height: 50vh;\\"
-       >
-         <div
-           class=\\"spinner-border text-primary\\"
-           role=\\"status\\"
-         >
-           <span
-             class=\\"sr-only\\"
-           >
-             Loading learning sequence...
-           </span>
-         </div>
-       </div>
-     </div>
-     <div
        class=\\"unit-iframe-wrapper\\"
      >
        <iframe
          allowfullscreen=\\"\\"
-         height=\\"0\\"
+         height=\\"300\\"
          id=\\"unit-iframe\\"
          referrerpolicy=\\"origin\\"
          scrolling=\\"no\\"
          src=\\"http://localhost:18000/xblock/3?show_title=0&show_bookmark_button=0\\"
          title=\\"3\\""
`;

exports[`Unit ignores MessageEvent with unhandled type 1`] = `
"[2mexpect([22m[31melement[39m[2m).toHaveAttribute([22m[32m[32m\\"height\\"[39m[32m[39m[2m, [22m[32m[32m\\"300\\"[39m[32m[39m[2m) // element.getAttribute(\\"height\\") === \\"300\\"[22m

Expected the element to have attribute:
[32m  height=\\"300\\"[39m
Received:
[31m  height=\\"0\\"[39m"
`;

exports[`Unit renders correctly 1`] = `
<DocumentFragment>
  <div
    class="unit"
  >
    <h2
      class="mb-0 h4"
    >
      3
    </h2>
    <button
      aria-disabled="false"
      aria-live="assertive"
      class="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-link px-1 ml-n1 btn-sm"
      type="button"
    >
      <span
        class="d-flex align-items-center justify-content-center"
      >
        <span
          class="pgn__stateful-btn-icon"
        >
          <img
            alt="fa-bookmark"
            class="fa-bookmark"
            data-testid="icon"
          />
        </span>
        <span>
          Bookmark this page
        </span>
      </span>
    </button>
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading learning sequence...
          </span>
        </div>
      </div>
    </div>
    <div
      class="unit-iframe-wrapper"
    >
      <iframe
        allowfullscreen=""
        height="0"
        id="unit-iframe"
        referrerpolicy="origin"
        scrolling="no"
        src="http://localhost:18000/xblock/3?show_title=0&show_bookmark_button=0"
        title="3"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unit renders proper message for gated content 1`] = `
<DocumentFragment>
  <div
    class="unit"
  >
    <h2
      class="mb-0 h4"
    >
      3
    </h2>
    <button
      aria-disabled="false"
      aria-live="assertive"
      class="btn pgn__stateful-btn pgn__stateful-btn-state-default btn-link px-1 ml-n1 btn-sm"
      type="button"
    >
      <span
        class="d-flex align-items-center justify-content-center"
      >
        <span
          class="pgn__stateful-btn-icon"
        >
          <img
            alt="fa-bookmark"
            class="fa-bookmark"
            data-testid="icon"
          />
        </span>
        <span>
          Bookmark this page
        </span>
      </span>
    </button>
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading locked content messaging...
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="d-flex justify-content-center align-items-center flex-column"
        style="height: 50vh;"
      >
        <div
          class="spinner-border text-primary"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading learning sequence...
          </span>
        </div>
      </div>
    </div>
    <div
      class="unit-iframe-wrapper"
    >
      <iframe
        allowfullscreen=""
        height="0"
        id="unit-iframe"
        referrerpolicy="origin"
        scrolling="no"
        src="http://localhost:18000/xblock/3?show_title=0&show_bookmark_button=0"
        title="3"
      />
    </div>
  </div>
</DocumentFragment>
`;
